Name:          d3hs
Version:       0.1
Synopsis:      A graphing library wrapping D3.js with JMacro
Author:        Andrew Stein
Maintainer:    steinlink@gmail.com
Stability:     Experimental
Category:      Graphing
Build-type:    Simple
Cabal-version: >=1.8

Library
  hs-source-dirs: src/hs/lib
  Build-depends:
    base                     ,
    bytestring               ,
    interpolatedstring-perl6 >= 0.9.0,
    mtl                      >= 2.1 && <= 2.2,
    jmacro                   >= 0.6.3 && <0.7,
    process                  >= 1.1,
    wl-pprint-text           == 1.1.0.0,
    lens                     >= 3.9      && < 3.11

  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -fno-warn-type-defaults

  exposed-modules:  
    Soostone.Graphing
    Soostone.Graphing.Base
    Soostone.Graphing.Base.Cursor
    Soostone.Graphing.Base.D3
    Soostone.Graphing.Base.Graph
    Soostone.Graphing.Base.JMacro
    Soostone.Graphing.Base.Prelude
    Soostone.Graphing.Base.Transform
    Soostone.Graphing.Charts
    Soostone.Graphing.Render
    Soostone.Graphing.Repl
    Soostone.Graphing.Shapes

Test-Suite spec
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: src/hs/test
  Ghc-Options: -Wall -threaded -fbreak-on-exception
  Main-Is: Spec.hs
  Build-Depends:
    base,
    bytestring   >= 0.10      && < 0.11,
    directory    >= 1.2       && < 1.3,
    hashable     >= 1.1       && < 1.3,
    hspec        >= 1.3,
    process      >= 1.1       && < 1.2,
    jmacro       >= 0.6       && < 0.7,
    interpolatedstring-perl6 >= 0.9.0,
    HUnit,
    d3hs

