Name:          d3hs
Version:       0.1
Synopsis:      A graphing library wrapping D3.js with JMacro
Author:        Andrew Stein
Maintainer:    steinlink@gmail.com
Stability:     Experimental
Category:      Graphing
Build-type:    Simple
Cabal-version: >=1.8

Library
  hs-source-dirs: src/hs/lib
  Build-depends:
    base,
    bytestring               >= 0.10     && < 0.11,
    file-embed               >= 0.0      && < 0.1,
    interpolatedstring-perl6 >= 0.9      && < 0.10,
    jmacro                   >= 0.6.3    && < 0.7,
    lens                     >= 3.9      && < 4.3,
    mtl                      >= 2.1      && < 2.3,
    process                  >= 1.1      && < 1.2,
    regex-compat             >= 0.95     && < 0.96,
    temporary                >= 1.2      && < 1.3,
    wl-pprint-text           >= 1.1      && < 1.2,
    TypeCompose              >= 0.9.9    && < 0.10

  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -fno-warn-type-defaults

  exposed-modules:  
    Soostone.Graphing
    Soostone.Graphing.D3
    Soostone.Graphing.D3.Cursor
    Soostone.Graphing.D3.Selection
    Soostone.Graphing.D3.Graph
    Soostone.Graphing.D3.JMacro
    Soostone.Graphing.D3.Render
    Soostone.Graphing.D3.Style
    Soostone.Graphing.D3.Scope
    Soostone.Graphing.D3.Transform
    Soostone.Graphing.Chart
    Soostone.Graphing.Chart.Axis
    Soostone.Graphing.Chart.Base
    Soostone.Graphing.Chart.Element
    Soostone.Graphing.Chart.Layout
    Soostone.Graphing.Repl
    Soostone.Graphing.Theme
    Soostone.Graphing.Theme.Base
    Soostone.Graphing.Theme.Prelude

Benchmark bench
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: src/hs/bench
  Main-Is: Bench.hs
  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -funfolding-use-threshold=16 -fexcess-precision
    -optc-O3 -optc-ffast-math    
  Build-Depends: 
    base,
    criterion,
    base,
    bytestring,
    utf8-string,    
    directory,
    MissingH,
    file-embed,
    cereal,
    HTTP,
    network,
    process,
    jmacro,
    lens,
    d3hs

Test-Suite spec
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: src/hs/test
  Ghc-Options: -Wall -threaded -fbreak-on-exception
  Main-Is: Spec.hs
  Build-Depends:
    base,
    bytestring               >= 0.10   && < 0.11,
    directory                >= 1.2    && < 1.3,
    file-embed               >= 0.0    && < 0.1,
    hashable                 >= 1.1    && < 1.3,
    hspec                    >= 1.3, 
    HUnit,
    HTTP                     >= 4000.2 && < 4000.3,
    interpolatedstring-perl6 >= 0.9    && < 0.10,
    jmacro                   >= 0.6    && < 0.7,
    network                  >= 2.4    && < 2.5,
    process                  >= 1.1    && < 1.2,
    d3hs
