Name:          hs-d3
Version:       0.1
Synopsis:      A graphing library wrapping D3.js with JMacro
License:       BSD3
License-file:  LICENSE
Author:        Andrew Stein
Maintainer:    info@soostone.com
Stability:     Experimental
Category:      Graphing
Build-type:    Simple
Cabal-version: >=1.8

Library
  hs-source-dirs: src
  Build-depends:
    base,
    bytestring               >= 0.10     && < 0.11,
    file-embed               >= 0.0      && < 0.1,
    interpolatedstring-perl6 >= 0.9      && < 0.10,
    jmacro                   >= 0.6.3    && < 0.7,
    lens                     >= 3.9      && < 4.3,
    mtl                      >= 2.1      && < 2.3,
    process                  >= 1.1      && < 1.3,
    regex-compat             >= 0.95     && < 0.96,
    temporary                >= 1.2      && < 1.3,
    wl-pprint-text           >= 1.1      && < 1.2,
    TypeCompose              >= 0.9.9    && < 0.10

  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -fno-warn-type-defaults

  exposed-modules:  
    Graphics.HSD3
    Graphics.HSD3.D3
    Graphics.HSD3.D3.Cursor
    Graphics.HSD3.D3.Selection
    Graphics.HSD3.D3.Graph
    Graphics.HSD3.D3.JMacro
    Graphics.HSD3.D3.Render
    Graphics.HSD3.D3.Style
    Graphics.HSD3.D3.Scope
    Graphics.HSD3.D3.Transform
    Graphics.HSD3.Chart
    Graphics.HSD3.Chart.Axis
    Graphics.HSD3.Chart.Base
    Graphics.HSD3.Chart.Element
    Graphics.HSD3.Chart.Layout
    Graphics.HSD3.Repl
    Graphics.HSD3.Theme
    Graphics.HSD3.Theme.Base
    Graphics.HSD3.Theme.Prelude

Benchmark bench
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: bench
  Main-Is: Bench.hs
  ghc-options: 
    -Wall -fwarn-tabs -funbox-strict-fields
    -fno-warn-unused-do-bind -threaded
    -funfolding-use-threshold=16 -fexcess-precision
    -optc-O3 -optc-ffast-math    
  Build-Depends: 
    base,
    criterion,
    base,
    bytestring,
    utf8-string,    
    directory,
    MissingH,
    file-embed,
    cereal,
    HTTP,
    network,
    process,
    jmacro,
    lens,
    hs-d3

Test-Suite spec
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: test/suite
  Ghc-Options: -Wall -threaded -fbreak-on-exception
  Main-Is: Spec.hs
  Build-Depends:
    base,
    bytestring               >= 0.10   && < 0.11,
    directory                >= 1.2    && < 1.3,
    file-embed               >= 0.0    && < 0.1,
    hashable                 >= 1.1    && < 1.3,
    hspec                    >= 1.3, 
    HUnit,
    HTTP                     >= 4000.2 && < 4000.3,
    interpolatedstring-perl6 >= 0.9    && < 0.10,
    jmacro                   >= 0.6    && < 0.7,
    network                  >= 2.4    && < 2.5,
    process                  >= 1.1    && < 1.3,
    hs-d3
